--- a/plugins/deepltrans/templates/content_bersetzungen_backend.html
+++ b/plugins/deepltrans/templates/content_bersetzungen_backend.html
@@ -27,20 +27,17 @@
 		<table class="outside  table table-striped table-hover">
 			<tr>
 				<th>{$plugin_deepltrans_sprache}</th>
-				<th> {$plugin_deepltrans_bersetzt}</th>
 				<th>{$plugin_deepltrans_translate} </th>
+
+				<th>{$plugin_deepltrans_letzte_bersetzung_am} </th>
 			</tr>
 			{foreach item=language from=$languages}
 			<tr>
 				<td>{$language.lang_long}</td>
-				<td>{$language.mainBackend} %</td>
 				<td>
-					{if $language.mainBackend < 99}
-					<a href="{$translink}&trans=main&what=backend&lang={$language.lang_short}" id="deepltrans_bersetzungen_jetzt_starten_bvar" class="btn btn-info" >{$plugin_deepltrans_bersetzungen_jetzt_starten_bvar}</a>
-					{else}
-					<p class="btn">{$translateddeepl}</p>
-					{/if}
+					<a href="{$translinkContent}&transcontent=ok&lang={$language.lang_short}" id="deepltrans_bersetzungen_jetzt_starten_bvar" class="btn btn-info" >{$plugin_deepltrans_bersetzungen_jetzt_starten_bvar}</a>
 				</td>
+				<td> - </td>
 
 			</tr>
 			{/foreach}
@@ -49,7 +46,6 @@
 
 		{if $plugin_creator_is_dev}
 
- #start#
 			<span class="ignore"></span>
 			<!-- Der Start Button ist notwendig damit sich das System daran aun kann. -->
 			<div id="rapid_form_slot">
@@ -74,7 +70,7 @@
 
 		{/if}
 	</div>
-	<script src="../plugins/deepltrans/js/trans.js" type="text/javascript" ></script>
+
 	{*<!-- Hier kommt der Fuss rein-->*}
 	{include file=foot.inc.html}
 {/if}
