--- a/plugins/user_download/templates/user_download_front.html
+++ b/plugins/user_download/templates/user_download_front.html
@@ -1,6 +1,6 @@
 <div class="artikel">
 <h1>{$plugin_user_download__fronttitle}</h1>
-<h3>{$plugin_user_download__alldownloads}</h3>
+<p>{$plugin_user_download__alldownloads}</p>
 {$plugin.user_download.file_liste}
 </table>
 
