--- a/plugins/newsletter/templates/news_archiv.html
+++ b/plugins/newsletter/templates/news_archiv.html
@@ -4,14 +4,14 @@
 	{foreach item=old from=$old_news_inhalt}
 		<p style="margin-bottom:.2em">Newsletter vom {$old.news_date}</p>
         <p style="margin-bottom:.2em"><strong>{$old.news_uberschrift}</strong></p>
-		<p>{$old.news_inhalt}</p> {* Inhalt HTML würde das Layout sprengen!!! TODO: eigene, 1-spaltige Seite ohne Spalten li/re *}
+		<p>{$old.news_inhalt}</p> {* Inhalt HTML wï¿½rde das Layout sprengen!!! TODO: eigene, 1-spaltige Seite ohne Spalten li/re *}
 	{/foreach}
 	<p>&nbsp;</p>
 {else}
 	{assign var="first" value=0}
 	{foreach item=old from=$old_news}
 		{if $first==0 && $old_news}
-			<table border="0" cellpadding="0" cellspacing="0">
+			<table border="0" cellpadding="0" cellspacing="0" class="table table-striped" style="width: 100%;">
 			<tr>
 				<th align="left" id="datum">{$datum}</th>
 				<th width="10" align="left" id="datum">&nbsp;</th>
