--- a/plugins/freiemodule/templates/freiemoduleformeingabe.html
+++ b/plugins/freiemodule/templates/freiemoduleformeingabe.html
@@ -7,6 +7,11 @@
 {/if}
 <p>{$plugin.freiemodule.name_code}</p>
 
+{if not $isFreeModuleTranslated}
+	<div class="alert alert-info">
+		<strong>{$plugin.freiemodule.not_translated_note|escape}</strong>
+	</div>
+{/if}
 
   <form action="" method="post">
 
@@ -144,6 +149,7 @@
 	 <input type="text" name="freiemodule_stop" id="freiemodule_stop" value="{$freiemodule_stop}" size="8" maxlength="255"/><br /><br />
 
 
+		<input type="hidden" name="freiemodule_modulid" value="{$freiemodule_modulid|escape}" />
   <input type="hidden" name="freiemodule_id" value="{$freiemodule_id}"/>
   <br /><br />
 
