Edited the code of the standard contact-form Fixed the check for the spam of the contact form Added an option to control, if mails should be sent to the person that filled out the contact form

--- a/interna/templates/standard/stamm.html
+++ b/interna/templates/standard/stamm.html
@@ -225,6 +225,11 @@
 				{include file=artikel_editor.inc.html}
 			</fieldset>
 			<fieldset>
+				<legend>{$message_455}:</legend>
+				<input type="checkbox" {$send_reply_mail} id="send_reply_mail" name="send_reply_mail" value="1" />
+				<label for="send_reply_mail" style="width:50%">Beim Absenden des Kontaktformulars auch eine Mail an den Besucher senden.</label>
+			</fieldset>
+			<fieldset>
 				<legend>{$message_70}:</legend>
 				<input type="hidden" name="active_language" value="{$active_language}" />
 				{*<!-- Eintragen-->*}
