--- a/interna/templates/standard/stamm.html
+++ b/interna/templates/standard/stamm.html
@@ -227,7 +227,7 @@
 			<fieldset>
 				<legend>{$message_455}:</legend>
 				<input type="checkbox" {$send_reply_mail} id="send_reply_mail" name="send_reply_mail" value="1" />
-				<label for="send_reply_mail" style="width:50%">Beim Absenden des Kontaktformulars auch eine Mail an den Besucher senden.</label>
+				<label for="send_reply_mail" style="width:50%">{$system_config_contactform_send_reply_mail}</label>
 			</fieldset>
 			<fieldset>
 				<legend>{$message_70}:</legend>
