--- a/interna/templates/standard/user.html
+++ b/interna/templates/standard/user.html
@@ -1,17 +1,17 @@
 {if $IS_ADMIN}
 {include file=head.inc.utf8.html}
 {include file=menu.inc.html}
-{if $text_error}
-<div class="error">
-	{$text_error}
-</div>
-{/if}
-{if $user_message_text}
-<div class="message">
-	{$user_message_text}
-</div>
-{/if}
 <div class="artikel" >
+	{if $text_error}
+		<div class="error">
+			{$text_error}
+		</div>
+	{/if}
+	{if $user_message_text}
+		<div class="message">
+			{$user_message_text}
+		</div>
+	{/if}
 	<div class="aktuell" id="aktuell_{$menuid_aktuell}"></div>
 	{$text}
 	{$logindaten}
@@ -336,7 +336,7 @@
 			</select>
 		</div>
 		<div class="large-12 medium-12 columns">
-			<label for="user_gender">{$message_user_anrede}<span class="must_stern"> *</span> </label>
+			<label for="user_gender">{$message_user_anrede}</label>
 			<select name="user_gender" id="user_gender" size="1" >
 				<option value="">{$auswaehlen}</option>
 				<option {if $table.user_gender == "w"} selected="selected"{/if}  value="w">{$frau}</option>
@@ -359,7 +359,7 @@
 		<label for="neuort" class="left">{$message_534} {$table.fehltort}:</label><br />
 		<input type="text" class="inputtext" id="neuort" name="neuort" value="{$table.ortname}" size="35" maxlength="50" /><br />
 
-		<label for="user_country">{$message_user_country}  {$table.fehltuser_country}<span class="must_stern"> *</span> </label>
+		<label for="user_country">{$message_user_country}  {$table.fehltuser_country}</label>
 		<select name="user_country" id="user_country" size="1" >
 			<option value="">{$auswaehlen}</option>
 			{foreach key=countryKey item=country from=$countries}
