Fixed mails being sent over smtp being empty Changed SMTP-Password fields to be of type password

--- a/interna/templates/standard/sub_templates/stamm_email.html
+++ b/interna/templates/standard/sub_templates/stamm_email.html
@@ -41,7 +41,7 @@
 			<input type="text" id="smtp_user" name="smtp_user" value="{$menu.smtp_user}" />
 
 			<label for="smtp_pass">{$message.stamm.smtp.password}</label><br />
-			<input type="text" id="smtp_pass" name="smtp_pass" value="{$menu.smtp_pass}" />
+			<input type="password" id="smtp_pass" name="smtp_pass" value="{$menu.smtp_pass}" />
 		</fieldset>
 		<br />
 	{/foreach}
