--- a/styles_default/templates/__index.html
+++ b/styles_default/templates/__index.html
@@ -25,7 +25,7 @@
     </article>
 </div>
 
-<div id="main" class="row">
+<main id="main" class="row">
     {*<!-- Auf der Startseite ein volle-Breite-Template -->*}
     {if $aktive_menuid == 1}
         <article id="content" class="large-12 medium-12 columns">
@@ -44,7 +44,7 @@
             {include file="_inhalt_rechts.html"}
         </aside>
     {/if}
-</div>
+</main>
 
 <footer class="row">
     {include file="_fuss.html"}
