--- a/interna/templates/standard/sub_templates/stamm_email.html
+++ b/interna/templates/standard/sub_templates/stamm_email.html
@@ -34,6 +34,13 @@
 			<label for="smtp_host">{$message.stamm.smtp.host}</label><br />
 			<input type="text" id="smtp_host" name="smtp_host" value="{$menu.smtp_host}" />
 
+			<label for="smtp_prefix">{$message.stamm.smtp.prefix}</label>
+			<select name="smtp_prefix" id="smtp_prefix" title="{$message.stamm.smtp.prefix}" style="width:calc(60% + 14px);" size="1">
+				<option value="0" {if $menu.smtp_prefix == 0}selected="selected"{/if}>
+				<option value="1" {if $menu.smtp_prefix == 1}selected="selected"{/if}>TLS</option>
+				<option value="2" {if $menu.smtp_prefix == 2}selected="selected"{/if}>SSL</option>
+			</select>
+
 			<label for="smtp_port">{$message.stamm.smtp.port}</label><br />
 			<input type="number" id="smtp_port" name="smtp_port" value="{$menu.smtp_port}" />
 
